<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello, UserLoginAssignmentActivity!</string>
    <string name="app_name">UserLoginAssignment</string>
	<string name="UserName">Name :</string>
	<string name="UserPassword">Password :</string>
	<string name="ButtonNext">Next</string>
	<string name="lblAddress">Address</string>
	
	<string name="UserForm">User Details</string>
	<string name="UserGender">Gender</string>
	<string name="Male">Male</string>
	<string name="Female">Female</string>
	
	<string name="UserHobbies">Hobbies</string>
	<string name="chkSinging">Singing</string>
	<string name="chkDancing">Dancing</string>
	<string name="chkReading">Reading</string>
	<string name="buttonDisplay">Display</string>
	

	<string name="Address">Address:</string>
	<string name="Gender">Gender:</string>
	<string name="Hobbies">Hobbies:</string>
</resources>