<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

 
  <TextView
        android:id="@+id/Name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/UserName" /> 
  
   <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblAddress"
        /> 
        
     <EditText
        android:id="@+id/Address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="" 
       />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
    android:weightSum="1">
    
  <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/UserGender" /> 

  <RadioGroup
       android:id="@+id/radioGroup	"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
  
  	<RadioButton android:id="@+id/radioMale"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/Male" 
       android:layout_weight="0.5"/>
  
  	<RadioButton android:id="@+id/radioFemale"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/Female" 
      android:checked="true"
      android:layout_weight="0.5"/>
  
</RadioGroup>
</LinearLayout>  


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"       
        android:text="@string/UserHobbies" />   
        

     <CheckBox
        android:id="@+id/chkSinging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkSinging" />
 
    <CheckBox
        android:id="@+id/chkDancing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkDancing" />
 
    <CheckBox
        android:id="@+id/chkReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkReading" />
        
   <Button 
        android:id="@+id/buttonDisplay"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buttonDisplay"
        
        />
</LinearLayout>